--- a/Domination/honours-project-report/mybibfile.bib
+++ b/Domination/honours-project-report/mybibfile.bib
@@ -163,3 +163,12 @@
  address = {Essex, UK},
  keywords = {Action grammars, Bayesian methods, Goal recognition, Intent inference, Plan recognition, Probabilistic grammars, Task tracking},
 } 
+
+@book{JohnFunge:AIForComp,
+ author = "John David Funge",
+ title = "Artificial Intelligence for Computer Games: An Introduction",
+ pages = {viii -- 9},
+ year = "2004",
+ publisher = "A K Peters",
+ ISBN = "1-58450-344-0",
+}
